--- a/app/views/control.scala.html
+++ b/app/views/control.scala.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0," /> 
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/control.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/mustache.js")" type="text/javascript"></script>
@@ -16,36 +17,11 @@
         <script src="@routes.Assets.at("javascripts/Vector2.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/ShipMovingTouch.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/BulletSebs.js")" type="text/javascript"></script>
-
-        <style type="text/css"> 
-    
-            * {
-              -webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
-              -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
-              -webkit-tap-highlight-color: rgba(0,0,0,0); 
-              -webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
-              -webkit-tap-highlight-color: rgba(0,0,0,0); 
-            }
-            
-            body {
-                background-color: #000000;
-                margin: 0px;
-            }
-            canvas {
-                display:block; 
-                position:absolute; 
-            }
-            .container {
-                width:auto;
-                text-align:center;
-                background-color:#ff0000;
-            }
-        </style>
     </head>
     <body>
         <div id="win" style="display:none;"><h1><h1>YOU WIN !!!</h1><br/><br/><a class="btn btn-primary" href="@routes.Application.mobilePad(username.split("-").apply(0))">Play again</a></div>
         <div id="lose" style="display:none;"><br/><h1>YOU'RE DEAD !!!</h1><br/><br/><a class="btn btn-primary" href="@routes.Application.mobilePad(username.split("-").apply(0))">Play again</a></div>
-         <div id="wait" style="display:none;"><br/><h1>Waiting to join current game ...</h1></div>
+        <div id="wait" style="display:none;"><br/><h1>Waiting to join current game ...</h1></div>
         <script>
 
             $(window).ready(function() {
