--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,8 +17,17 @@ body {
 }
 
 #win {
-	width: 100%;
-	height: 100%;
+	width: 300px;
+	height: 150px;
+    position: fixed;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    margin-top: -85px;
+    margin-left: -160px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 #wait {
