Fix restart game when ended

--- a/app/views/board.scala.html
+++ b/app/views/board.scala.html
@@ -33,7 +33,7 @@
         <div id="win">
             <h1>The winner is</h1>
             <h1 id="player">Anonymous</h1>
-            <br/><br/><a class="btn btn-primary pull-right" href="@routes.Application.index()">New game</a>
+            <br/><br/><a class="btn btn-primary pull-right" href="@routes.Application.resetIndex()">New game</a>
         </div>
     <script>
 
