--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,18 +26,36 @@ body {
     margin-top: -85px;
     margin-left: -210px;
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 5px;
 }
 
 #wait {
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 150px;
+    position: fixed;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    margin-top: -85px;
+    margin-left: -210px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
 }
 
 #lose {
-	width: 100%;
-	height: 100%;
+    width: 400px;
+    height: 150px;
+    position: fixed;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    margin-top: -85px;
+    margin-left: -210px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
 }
 
 #win h1 {
